<resources>
    <string name="app_name">FLOOD-PUZZLE</string>
    <string name="player_move_count">Score Board</string>
    <string name="row_s_number">Square Size</string>
    <string name="columns_s_number">Columns</string>
    <string name="one_player">One Player</string>
    <string name="player_vs_ai">Player VS AI</string>
    <string name="generate_puzzle">Generate Puzzle</string>
    <string name="two_player">Two Players</string>
    <string name="distinct_color_count">Colors</string>
    <string name="app_icon">APP-ICON</string>
    <string name="help_button">HELP-Button</string>
    <string name="flood_fill_what">\tYou are given a grid of squares, coloured at random in multiple colours. In each move, you can flood-fill the top left square in a colour of your choice (i.e. every square reachable from the starting square by an orthogonally connected path of squares all the same colour will be filled in the new colour). As you do this, more and more of the grid becomes connected to the starting square. \n\n\tYour aim is to make the whole grid the same colour, in as few moves as possible. The game will set a limit on the number of moves, based on running its own internal solver. You win if you can make the whole grid the same colour in that many moves or fewer.\n</string>
    <string name="flood_fill_what_header">\nWhat is Flood Fill</string>
    <string name="flood_fill_control">\t1.To play Flood, touch in a square.\n\n\t2.The top left corner and everything connected to it will be flood-filled with the colour of the square you clicked.\n\n\t3.Clicking a square the same colour as the top left corner has no effect, and therefore does not count as a move in Single player mode.\n</string>
    <string name="flood_fill_control_header">Controls</string>
    <string name="flood_fill_param_header">Flood Parameters</string>
    <string name="flood_fill_param">These parameters are available in Game Generation Option.\n\n\t(a)Grid Size ( Square Size of the Grid)[5–20] \n\n\t(b)Colours (Number of Distinct Colors [2–7]\n\n\t(c)Game Mode\n\t\t1.Single Player\n\t\t2.Dual Player\n\t\t3.Player VS AI\n</string>
    <string name="flood_fill_header">Flood Fill Puzzle | How To</string>
    <string name="game_mode">Game Mode</string>
</resources>
